--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Pallet Town — Coming Soon</title>
+  <title>Pallet Town — Coming 2026</title>
   <meta name="description" content="Pallet Town — Pokémon trading done right. Secure escrow, verified trades, and a friendly marketplace. Launching soon." />
   <meta name="theme-color" content="#111827" />
 
