Revise header and simplify content in index.htmlasdf
Updated the header text and removed several sections to streamline the content.

--- a/index.html
+++ b/index.html
@@ -47,11 +47,8 @@
         Coming Soon
       </p>
       <h1 class="text-3xl sm:text-5xl font-extrabold leading-tight">
-        Pokémon trades, made safe.
+        A Pokémon community coming to iOS.
       </h1>
-      <p class="mt-4 text-slate-200/90 max-w-2xl">
-        Prof. Rak inspects both sides, secures escrow, and dispatches verified trades once everything checks out. A safe and friendly hub for the Pokémon TCG community.
-      </p>
 
       <div class="mt-8 flex flex-col sm:flex-row items-start sm:items-center gap-4">
         <a href="mailto:hello@pallettown.app?subject=Keep%20me%20posted" class="inline-flex items-center justify-center rounded-2xl bg-white text-slate-900 font-semibold px-5 py-3 shadow hover:shadow-lg transition">
@@ -60,20 +57,6 @@
         <a href="#" class="text-sm text-indigo-200/90 hover:text-white underline/30">Read the roadmap</a>
       </div>
 
-      <div class="mt-10 grid grid-cols-1 sm:grid-cols-3 gap-4 text-sm text-slate-200/80">
-        <div class="p-4 rounded-xl bg-white/5 ring-1 ring-white/10">
-          <div class="font-semibold">Secure Escrow</div>
-          <div class="mt-1">Funds and cards are protected until both sides confirm.</div>
-        </div>
-        <div class="p-4 rounded-xl bg-white/5 ring-1 ring-white/10">
-          <div class="font-semibold">Verification</div>
-          <div class="mt-1">Authentication steps ensure what you traded is what you get.</div>
-        </div>
-        <div class="p-4 rounded-xl bg-white/5 ring-1 ring-white/10">
-          <div class="font-semibold">Community-first</div>
-          <div class="mt-1">Modern tools, clear statuses, and helpful guidance.</div>
-        </div>
-      </div>
     </section>
 
     <footer class="mt-10 flex items-center justify-between text-sm text-slate-300/80">
