Update community name and footer attribution

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         Coming Soon
       </p>
       <h1 class="text-3xl sm:text-5xl font-extrabold leading-tight">
-        A Pokémon community coming to iOS.
+        A Pokémon TCG community coming to iOS.
       </h1>
 
       <div class="mt-8 flex flex-col sm:flex-row items-start sm:items-center gap-4">
@@ -60,7 +60,7 @@
     </section>
 
     <footer class="mt-10 flex items-center justify-between text-sm text-slate-300/80">
-      <span>© <span id="y"></span> Pallet Town</span>
+      <span>© <span id="y"></span> rakTech LLC</span>
       <a class="underline/30 hover:underline" href="mailto:hello@pallettown.app">hello@pallettown.app</a>
     </footer>
   </main>
