Update landing page text and remove roadmap link

--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
         Coming Soon
       </p>
       <h1 class="text-3xl sm:text-5xl font-extrabold leading-tight">
-        Pokémon trades, made safe.
+        A Pokémon community coming to iOS.
       </h1>
       <p class="mt-4 text-slate-200/90 max-w-2xl">
-        Prof. Rak inspects both sides, secures escrow, and dispatches verified trades once everything checks out. A safe and friendly hub for the Pokémon TCG community.
+        Coming 2026
       </p>
 
       <div class="mt-8 flex flex-col sm:flex-row items-start sm:items-center gap-4">
@@ -67,7 +67,7 @@
           <!-- Optional: redirect after success -->
           <input type="hidden" name="_next" value="https://pallettown.app/?subscribed=1" />
         </form>
-        <a href="#" class="text-sm text-indigo-200/90 hover:text-white underline/30">Read the roadmap</a>
+        
       </div>
 
     </section>
