Update footer copyright from Pallet Town to rakTech LLC

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     </section>
 
     <footer class="mt-10 flex items-center justify-between text-sm text-slate-300/80">
-      <span>© <span id="y"></span> Pallet Town</span>
+      <span>© <span id="y"></span> rakTech LLC</span>
       <a class="underline/30 hover:underline" href="mailto:hello@pallettown.app">hello@pallettown.app</a>
     </footer>
   </main>
