--- a/index.html
+++ b/index.html
@@ -3,20 +3,20 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Pallet Town — Coming Soon</title>
-  <meta name="description" content="Pallet Town — Pokémon trading done right. Secure escrow, verified trades, and a friendly marketplace. Launching soon." />
+  <title>Route 25 — Coming Soon</title>
+  <meta name="description" content="Route 25 — Pokémon trading done right. Secure escrow, verified trades, and a friendly marketplace. Launching soon." />
   <meta name="theme-color" content="#111827" />
 
   <!-- Open Graph -->
-  <meta property="og:title" content="Pallet Town — Coming Soon" />
+  <meta property="og:title" content="Route 25 — Coming Soon" />
   <meta property="og:description" content="Secure escrow and verified Pokémon TCG trades. Launching soon." />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://pallettown.app/" />
+  <meta property="og:url" content="https://route25.app/" />
   <meta property="og:image" content="/og.png" />
 
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Pallet Town — Coming Soon" />
+  <meta name="twitter:title" content="Route 25 — Coming Soon" />
   <meta name="twitter:description" content="Secure escrow and verified Pokémon TCG trades. Launching soon." />
   <meta name="twitter:image" content="/og.png" />
 
@@ -38,7 +38,7 @@
       <svg width="36" height="36" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
         <path d="M12 2l2.5 5 5.5.8-4 3.9.9 5.5L12 15l-4.9 2.2.9-5.5-4-3.9 5.5-.8L12 2z" fill="currentColor"/>
       </svg>
-      <span class="text-xl font-semibold tracking-tight">Pallet Town</span>
+      <span class="text-xl font-semibold tracking-tight">Route 25</span>
     </div>
 
     <section class="glass rounded-3xl p-8 sm:p-12 shadow-2xl ring-1 ring-white/10">
@@ -65,7 +65,7 @@
           <!-- Basic honeypot to reduce spam -->
           <input type="text" name="_gotcha" class="hidden" aria-hidden="true" />
           <!-- Optional: redirect after success -->
-          <input type="hidden" name="_next" value="https://pallettown.app/?subscribed=1" />
+          <input type="hidden" name="_next" value="https://route25.app/?subscribed=1" />
         </form>
         
       </div>
@@ -74,7 +74,7 @@
 
     <footer class="mt-10 flex items-center justify-between text-sm text-slate-300/80">
       <span>© <span id="y"></span> rakTech LLC</span>
-      <a class="underline/30 hover:underline" href="mailto:hello@pallettown.app">hello@pallettown.app</a>
+      <a class="underline/30 hover:underline" href="mailto:hello@route25.app">hello@route25.app</a>
     </footer>
   </main>
 
