Update description and headings in index.html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Route 25 — Coming Soon</title>
-  <meta name="description" content="Route 25 — Pokémon trading done right. Secure escrow, verified trades, and a friendly marketplace. Launching soon." />
+  <meta name="description" content="Route 25 — Pokémon trading done right. Secure escrow, verified trades, and a friendly community. Launching soon." />
   <meta name="theme-color" content="#111827" />
 
   <!-- Open Graph -->
@@ -47,10 +47,10 @@
         Coming Soon
       </p>
       <h1 class="text-3xl sm:text-5xl font-extrabold leading-tight">
-        A Pokémon community coming to iOS.
+        A Pokémon TCG Social Network.
       </h1>
       <p class="mt-4 text-slate-200/90 max-w-2xl">
-        Coming 2026
+        Coming to iPhone 2026
       </p>
 
       <div class="mt-8 flex flex-col sm:flex-row items-start sm:items-center gap-4">
