--- a/index.html
+++ b/index.html
@@ -68,14 +68,15 @@
     type="email"
     required
     placeholder="you@example.com"
-    class="w-full rounded-2xl bg-white/95 text-slate-900 placeholder-slate-500 px-4 py-3 shadow
-           focus:outline-none focus:ring-2 focus:ring-indigo-400"
+    class="flex-1 w-full rounded-2xl bg-white/95 text-slate-900 placeholder-slate-500
+           px-4 py-3 shadow focus:outline-none focus:ring-2 focus:ring-indigo-400"
   />
 
   <button
     type="submit"
-    class="w-full sm:w-auto inline-flex items-center justify-center rounded-2xl bg-white 
-           text-slate-900 font-semibold px-5 py-3 shadow hover:shadow-lg transition"
+    class="w-full sm:w-auto shrink-0 whitespace-nowrap inline-flex items-center justify-center
+           rounded-2xl bg-white text-slate-900 font-semibold px-6 py-3 shadow
+           hover:shadow-lg transition"
   >
     Get launch updates
   </button>
