--- a/index.html
+++ b/index.html
@@ -48,6 +48,19 @@
       <h1 class="text-3xl sm:text-5xl font-extrabold leading-tight">
         Your Pokémon TCG adventure is evolving.
       </h1>
+      <div class="mt-6 w-full flex justify-start">
+        <div class="w-full max-w-2xl relative rounded-xl shadow-lg overflow-hidden">
+          <div class="w-full" style="padding-top: 56.25%;"></div>
+          <iframe
+            src="https://www.youtube.com/embed/Tyxdjh0sTRY"
+            title="Route 25 Teaser"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen
+            class="absolute inset-0 w-full h-full"
+          ></iframe>
+        </div>
+      </div>
       <div class="mt-4 max-w-2xl space-y-3">
         <p class="text-sm sm:text-base text-slate-100/90">
           Route 25 is the first Pokémon TCG social network, launching on iPhone. We can't wait to share more! Join the waitlist to become a Founder Trainer and get early access when the beta opens.*
@@ -94,7 +107,11 @@
 
     <footer class="mt-10 flex items-center justify-between text-sm text-slate-300/80">
       <span>© <span id="y"></span> rakTech LLC</span>
-      <a class="underline/30 hover:underline" href="mailto:hello@route25.app">hello@route25.app</a>
+      <div class="flex items-center gap-4">
+        <a class="underline/30 hover:underline" href="/terms.html">Terms of Service</a>
+        <a class="underline/30 hover:underline" href="/privacy.html">Privacy Policy</a>
+        <a class="underline/30 hover:underline" href="mailto:hello@route25.app">Contact</a>
+      </div>
     </footer>
   </main>
 
