--- a/index.html
+++ b/index.html
@@ -111,6 +111,17 @@
         <a class="underline/30 hover:underline" href="/terms.html">Terms of Service</a>
         <a class="underline/30 hover:underline" href="/privacy.html">Privacy Policy</a>
         <a class="underline/30 hover:underline" href="mailto:hello@route25.app">Contact</a>
+        <a
+  href="https://x.com/route25app"
+  target="_blank"
+  rel="noopener noreferrer"
+  aria-label="Route 25 on X"
+  class="opacity-80 hover:opacity-100 transition"
+>
+  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="w-5 h-5 fill-current">
+    <path d="M18.244 2.25h3.308l-7.227 8.26 8.504 11.24h-6.66l-5.213-6.817-5.966 6.817H1.68l7.73-8.835L1.25 2.25h6.83l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"/>
+  </svg>
+</a>
       </div>
     </footer>
   </main>
