--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Route 25 — Coming Soon</title>
-  <meta name="description" content="Route 25 — the first Pokémon TCG social network. Your Pokémon TCG adventure is evolving. Founder Trainer beta opens in 2026." />
+  <meta name="description" content="Route 25 — the first Pokémon TCG social network. Your Pokémon TCG adventure is evolving." />
   <meta name="theme-color" content="#111827" />
 
   <!-- Open Graph -->
   <meta property="og:title" content="Route 25 — Coming Soon" />
-  <meta property="og:description" content="The first Pokémon TCG social network. Become a Founder Trainer and get early access when beta opens in 2026." />
+  <meta property="og:description" content="The first Pokémon TCG social network. Your Pokémon TCG adventure is evolving." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://route25.app/" />
   <meta property="og:image" content="/og.png" />
@@ -17,8 +17,10 @@
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Route 25 — Coming Soon" />
-  <meta name="twitter:description" content="The first Pokémon TCG social network. Become a Founder Trainer and get early access when beta opens in 2026." />
+  <meta name="twitter:description" content="The first Pokémon TCG social network. Your Pokémon TCG adventure is evolving." />
   <meta name="twitter:image" content="/og.png" />
+  <meta name="twitter:site" content="@route25app" />
+  <meta name="twitter:creator" content="@route25app" />
 
   <!-- Favicon (replace /favicon.svg with your own) -->
   <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
