--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
       <nav class="nav" aria-label="Primary">
         <a href="#features">Features</a>
         <a href="#screens">Screens</a>
+        <a href="/assets/Route_25_Press_Kit.zip" download>Press kit</a>
         <a class="button primary" href="#waitlist">Join waitlist</a>
       </nav>
     </div>
