--- a/index.html
+++ b/index.html
@@ -70,14 +70,14 @@
 
           <div class="card teaser" data-reveal>
             <div class="teaser-inner">
-              <div class="video" aria-label="Route 25 teaser video">
-                <iframe
-                  src="https://www.youtube.com/embed/Tyxdjh0sTRY"
-                  title="Route 25 Teaser"
-                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                  allowfullscreen
-                ></iframe>
-              </div>
+	              <div class="video" aria-label="Route 25 teaser video">
+	                <iframe
+	                  src="https://www.youtube.com/embed/JbEZumJ3zBg"
+	                  title="Route 25 Teaser"
+	                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+	                  allowfullscreen
+	                ></iframe>
+	              </div>
             </div>
           </div>
         </div>
