--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           </div>
           <h1 data-reveal>Your Pokémon TCG adventure is evolving.</h1>
           <p class="lead" data-reveal>
-            Welcome to Route 25, the first social network built exclusively for Pokémon TCG collectors. Share, trade, track your collection, and level up your journey in a safe, modern, trainer-powered community.
+            Welcome to Route 25, the first social app built exclusively for Pokémon TCG collectors. Share, trade, track your collection, and level up your journey in a safe, modern, trainer-powered community.
           </p>
 
           <div class="hero-actions" data-reveal>
